--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -16,6 +16,7 @@
                 <td>{{ quiz.question }}</td>
             </tr>
            <tr>
+    <th>Options</th>
     <td>
         <ul>
             {% for option in quiz.options %}
