Initial commit of Symfony project

--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -1,5 +1,5 @@
 {# templates/user/edit.html.twig #}
-{% extends 'base0.html.twig' %}
+{% extends 'baseadmin.html.twig' %}
 
 {% block body %}
     <h1>Modifier l'utilisateur</h1>
