--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base0.html.twig' %}
+{% extends 'baseadmin.html.twig' %}
 
 {% block title %}Hello AdminController!{% endblock %}
 
@@ -18,3 +18,4 @@
     </ul>
 </div>
 {% endblock %}
+
