--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -1,5 +1,5 @@
 {# templates/admin/show.html.twig #}
-{% extends 'base3.html.twig' %}
+{% extends 'baseadmin.html.twig' %}
 
 {% block title %}Liste des Utilisateurs{% endblock %}
 
