--- a/templates/dashbord/index.html.twig
+++ b/templates/dashbord/index.html.twig
@@ -1,6 +1,6 @@
-{% extends 'baseadmin.html.twig' %}
+{% extends 'base2.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Hello DashbordController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,9 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>C:/Users/manna/TuniVibe/src/Controller/AdminController.php</code></li>
-        <li>Your template at <code>C:/Users/manna/TuniVibe/templates/admin/index.html.twig</code></li>
+        <li>Your controller at <code>C:/project/symfony/PROJETPI/TuniVibe-abir/src/Controller/DashbordController.php</code></li>
+        <li>Your template at <code>C:/project/symfony/PROJETPI/TuniVibe-abir/templates/dashbord/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
-
