--- a/templates/home/adminpage.html.twig
+++ b/templates/home/adminpage.html.twig
@@ -3,51 +3,8 @@
 
 
     {% block body %}
-            <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
-                        <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Dashboard</li>
-                        </ol>
-                        <div class="row">
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Evenments</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-warning text-white mb-4">
-                                    <div class="card-body">Warning Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">Success Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-danger text-white mb-4">
-                                    <div class="card-body">Danger Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
+           
+ <div class="row">
                             <div class="col-xl-6">
                                 <div class="card mb-4">
                                     <div class="card-header">
@@ -67,9 +24,6 @@
                                 </div>
                             </div>
                         </div>
-
-       
-
 
     <table class="table">
         <thead>
@@ -91,15 +45,12 @@
                 <td>{{ i.roles|join(', ') }}</td>
                 <td>{{ i.password }}</td>
                 <td>
-                    <a href="{{ path('app_edit', {'id': i.id}) }}" class="btn btn-primary">Modifier</a>
-                    <a href="{{ path('app_delete', {'id': i.id}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Supprimer</a>
+                    <a href="{{ path('app_editadmin', {'id': i.id}) }}" class="btn btn-primary">Modifier</a>
+                    <a href="{{ path('app_deleteadmin', {'id': i.id}) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Supprimer</a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_user') }}" class="btn btn-success">
-        Go to Another Page
-    </a>
 {% endblock %}
